# rust-user-auth

./: Cargo.toml  README.md  post.txt
migrations/2021-07-02-225222_create_users/: up.sql
migrations/2021-07-05-140148_posts/: up.sql
migrations/2021-07-07-165757_create_sessions/: down.sql  up.sql
mysql/: docker-compose.yml
mysql/src/: schema.rs
src/: auth.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  posts.rs  schema.rs
templates/: error.html  index.html  login.html  login_success.html  new_post.html  signup.html  signup_success.html
