[package]
name = "user-auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"
actix-rt = "*"
actix-session = "*"
bcrypt = "*"
clap = "*"
chrono = { version = "0.4.10", features = ["serde"] }
data-encoding = "*"
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
r2d2 = "*"
ring = "*"
serde = "*"
serde_json = "*"
